AC_PREREQ(2.54)
AC_INIT([mate-common], [2011.9.25],
        [https://github.com/Perberos/Mate-Desktop-Environment])

AC_CONFIG_SRCDIR([macros2/mate-autogen.sh])

AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([no])])

if test -z "$enable_maintainer_mode"; then
  enable_maintainer_mode=yes
fi
AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
mate-common.spec
macros2/Makefile
doc-build/Makefile
doc-build/mate-doc-common
])

AC_OUTPUT
